package exception;

public class MovingException extends Exception{
    public MovingException(String massage){
        super(massage);
    }
}
