package factory;

import watches.CasioGShock;

public interface CasioGShockProduction {
    CasioGShock makeCasioGShock();
}
