package peoples;

public interface Engineer {
    String researching();
    String watch(String object, String thoughts);
    String createInnovation(String innovation);
}
